lazy load hidden images

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
       <a href="/portfolio?venue" id="venue">Venue</a>
       <a href="/portfolio?food" id="food">Food</a>
     </nav>
-    <div class="hover-image fashion"></div>
-    <div class="hover-image lifestyle hidden"></div>
-    <div class="hover-image product hidden"></div>
-    <div class="hover-image venue hidden"></div>
-    <div class="hover-image food hidden"></div>
+    <div class="hover-image fashion lazy"></div>
+    <div class="hover-image lifestyle hidden lazy"></div>
+    <div class="hover-image product hidden lazy"></div>
+    <div class="hover-image venue hidden lazy"></div>
+    <div class="hover-image food hidden lazy"></div>
   </div>
 </section>
 
