--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@ banner_image: /images/placeholder.jpg
 <!-- - - - - - - - - - - - - - Intro Section both - - - - - - - - - - - - - -->
 <section class="padded light-bg grid">
   <div class="col-6_sm-12 padded-1">
-      <div class="bg-image square" style="background-image:url({{page.featured-image_path}})"></div>
+      <div class="bg-image square relative">
+          <img src="{{page.featured-image_path}}" class="img-overlay" alt="{{page.title}}" loading="lazy">
+      </div>
   </div>
   <div class="col-6_sm-12 padded-1 editable">
     <h2>I'm Emilio, aka Eyes of a Nomad.&nbsp;</h2>
