--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 layout: default
 title: Contact | Eyes of a Nomad
 footer_image: /images/placeholder-2.jpg
+footer_alt: temp
 header-class: on-top
 ---
 
@@ -27,8 +28,8 @@ header-class: on-top
 
 <!--  Banner Image  -->
 
-<section class="banner tall-50" style="background-image:url({{page.footer_image}});">
-
+<section class="banner tall-50">
+      <img src="{{page.footer_image}}" class="img-overlay" alt="{{page.footer_alt}}">
 </section>
 
 <!--  Contact form  -->
