--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,9 @@ featured_image: /images/uma-2020/eon-uma2020-30.jpg
   <div class="col-5_sm-3 relative">
     <h2 class="big-bold portfolio-heading"> Portfolio. </h2>
   </div>
-  <div class="col-7_sm-9 bg-image tall-110 portfolio-image" style="background-image:url('{{page.featured_image}}')"></div>
+  <div class="col-7_sm-9 bg-image tall-110 portfolio-image relative">
+    <img src="{{page.featured_image}}" class="img-overlay" alt="{{page.title}}" loading="lazy">
+  </div>
 </section>
 
 <!-- Portfolio Loop Section  -->
@@ -23,7 +25,9 @@ featured_image: /images/uma-2020/eon-uma2020-30.jpg
       {% for category in project.categories %} {{category | downcase}} {% endfor %}
       {% unless project.categories contains "featured" %} hidden {% endunless %}"
       href="{{project.url}}">
-        <div class="bg-image lazy" style="background-image:url('{{project.featured_image}}')"></div>
+        <div class="bg-image lazy relative">
+          <img src="{{project.featured_image}}" class="img-overlay" alt="{{project.title}}">
+        </div>
         <h2>{{project.title}}</h2>
         <p> {{project.subtitle}}</p>
       </a>
