caped font sizes on verticle text

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@ header-class: on-top
 
   .vertical-text {
     transform: rotate(270deg);
-    font-size: 15vh;
+    font-size: min(15vw, 120px);
     transform-origin: center right 0;
     display: inline-block;
     position: absolute;
