Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 title: About | Eyes of a Nomad
-meta-description:
-meta-keywords:
+meta-description: >-
+  Emilio Kuzma is a full time photographer, content creator & mentor in Bali,
+  Indonesia helping brands telling their story through photography/videography.
+meta-keywords: eyes of a nomad, emilio kuzma
 featured-image_path: /images/emile-profile.jpg
 banner_image: /images/placeholder.jpg
 ---
-
 <!-- - - - - - - - - - - - - - Banner both - - - - - - - - - - - - - - - - - -->
 
 <!-- - - - - - - - - - - - - - Intro Section both - - - - - - - - - - - - - -->
