Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
 layout: default
 title: Eyes of a Nomad | Photographer in Bali
-meta-description:
+meta-description: >-
+  Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in
+  fashion, swim and lifestyle in Bali, working with local and international
+  brands.
 meta-keywords:
 header-style: on-top hide-logo
 featured-image_path:
@@ -17,7 +20,6 @@ wide_image: /images/forsoul-2019/eon-forsoul-19.jpg
 featured_project_url: /projects/liq-bikini
 footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 ---
-
 <!-- this is just an example. You can safely delete these and add your own blocks -->
 
 
@@ -26,7 +28,7 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 <section class="grid home-banner">
   <div class="col-6_xs-12 grid">
     <div class="col-12-bottom padded-2">
-      <h1 class="logo"> Eyes of a <br> Nomad. </h1>
+      <h1 class="logo"> Eyes of a <br /> Nomad. </h1>
       <!-- <div class="padded-r padded-b">
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div> -->
@@ -51,39 +53,34 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 <section class="light-bg padded-v mob-show">
   <div class="col-12 mob-horizontal-scroll grid" style="padding: 0 1rem;">
     <div class="col-11 padded-1">
-      <a href="/portfolio?fashion" id="fashion" class="bg-image" 
-      style="background-image:url('/images/small/fashion.jpg')">
+      <a href="/portfolio?fashion" id="fashion" class="bg-image" style="background-image:url('/images/small/fashion.jpg')">
         <h3 class="pinned-to-bottom"> FASHION </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?lifestyle" id="lifestyle" class="bg-image lazy"
-      style="background-image:url('/images/small/lifestyle.jpg')">
+      <a href="/portfolio?lifestyle" id="lifestyle" class="bg-image lazy" style="background-image:url('/images/small/lifestyle.jpg')">
         <h3 class="pinned-to-bottom"> LIFESTYLE </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?product" id="product" class="bg-image product lazy"
-      style="background-image:url('/images/small/product.jpg')">
+      <a href="/portfolio?product" id="product" class="bg-image product lazy" style="background-image:url('/images/small/product.jpg')">
         <h3 class="pinned-to-bottom"> PRODUCT </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?venue" id="venue" class="bg-image venue lazy"
-      style="background-image:url('/images/small/venue.jpg')">
+      <a href="/portfolio?venue" id="venue" class="bg-image venue lazy" style="background-image:url('/images/small/venue.jpg')">
         <h3 class="pinned-to-bottom"> VENUE </h3>
       </a>
     </div>
     <div class="col-11 padded-1">
-      <a href="/portfolio?food" id="food" class="bg-image food lazy"
-      style="background-image:url('/images/small/food.jpg')">
+      <a href="/portfolio?food" id="food" class="bg-image food lazy" style="background-image:url('/images/small/food.jpg')">
         <h3 class="pinned-to-bottom"> FOOD </h3>
       </a>
     </div>
 
     </div>
 
-  </div>
+  
 
 </section>
 
@@ -150,18 +147,18 @@ footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
 
 <section class="bg-split-tan-white padded-10 padded-t-0">
         <div class="bg-image wide-landscape lazy" style="background-image:url({{page.wide_image}});"></div>
-    </div>
-  </div> <!-- end light-bg -->
+    
+   <!-- end light-bg -->
 
-</div>
+
 </section>
 
 <section class="padded centered grid-center padded-t-0">
   <div class="col-8_sm-12">
-    <hr class="centered wide">
+    <hr class="centered wide" />
     <p> Photography has always been a passion in my life, starting when I was a toddler, grabbing my father’s camera, emptying his entire roll of film aimlessly in a few short minutes and loving every minute of it. However, it wasn’t until I left my home in Melbourne, Australia, & began to travel the world, that my love for capturing a fraction of a second, something breathtakingly beautiful or a little crazy became an obsession. </p>
 
-    <hr class="centered wide">
+    <hr class="centered wide" />
   </div>
 </section>
 
