--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,11 @@
 ---
 layout: default
+title: Portfolio | Eyes of a Nomad
+meta-description: >-
+  Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in
+  fashion, swim and lifestyle in Bali, working with local and international
+  brands.
+meta-keywords:
 featured_image: /images/uma-2020/eon-uma2020-30.jpg
 ---
 
