--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ meta-description: >-
   Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in
   fashion, swim and lifestyle in Bali, working with local and international
   brands.
-meta-keywords:
+meta-keywords: eyes of a nomad, photographer in bali, emilio kuzma
 header-style: on-top hide-logo
 featured-image_path:
 banner-1_path: /images/placeholder-2.jpg
