--- a/work-with-us.html
+++ b/work-with-us.html
@@ -1,5 +1,11 @@
 ---
 layout: default
+title: Work with Us | Eyes of a Nomad
+meta-description: >-
+  Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in
+  fashion, swim and lifestyle in Bali, working with local and international
+  brands.
+meta-keywords: eyes of a nomad client, hire a photographer in bali, work with emilio kuzma
 banner_image: /images/uma-alure/eon-uma-alure-10.jpg
 photography-1_image: /images/forsoul-2019/eon-forsoul-23.jpg
 photography-2_image: /images/uma-resort/eon-uma-resort-5.jpg
