Updated 'work-with-us.html' via CloudCannon

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -2,10 +2,12 @@
 layout: default
 title: Work with Us | Eyes of a Nomad
 meta-description: >-
-  Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in
-  fashion, swim and lifestyle in Bali, working with local and international
+  We're a full creative agency in Bali specialising in photography, videography
+  and marketing that brings your vision to life and gets results for your
   brands.
-meta-keywords: eyes of a nomad client, hire a photographer in bali, work with emilio kuzma
+meta-keywords: >-
+  hire a photographer in bali, hire a creative agency in bali, work with emilio
+  kuzma
 banner_image: /images/uma-alure/eon-uma-alure-10.jpg
 photography-1_image: /images/forsoul-2019/eon-forsoul-23.jpg
 photography-2_image: /images/uma-resort/eon-uma-resort-5.jpg
@@ -34,7 +36,6 @@ services:
     url:
     image_path: /images/kabron/eon-kabron-21.jpg
 ---
-
 <!-- Heading Banner  -->
 <section class="padded grid">
   <div class="col-9 bg-image" style="background-image:url('{{page.banner_image}}')"></div>
@@ -178,7 +179,7 @@ services:
   <div class="col-6_sm-12 padded-l-10p">
     <div class="margin-top-2 bump-right mob-bump-0">
       <video controls poster="/videos/studio-screengrab.jpg">
-          <source src="/videos/studio-video-square.mp4" type="video/mp4">
+          <source src="/videos/studio-video-square.mp4" type="video/mp4" />
           <p>Your browser does not support the video element.</p>
       </video>
       <p class="image-caption-left"> Our Studio Setup </p>
@@ -214,7 +215,7 @@ services:
 
     <div class="video-container">
       <video controls poster="/videos/forsoul-screengrab.png">
-          <source src="/videos/forsoul-video.mp4" type="video/mp4">
+          <source src="/videos/forsoul-video.mp4" type="video/mp4" />
           <p>Your browser does not support the video element.</p>
       </video>
     </div>
