--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,11 @@
 ---
 layout: default
-title: Contact | Eyes of a Nomad
+title: Contact | Eyes of a Nomad | Photographer in Bali
+meta-description: >-
+  Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in
+  fashion, swim and lifestyle in Bali, working with local and international
+  brands.
+meta-keywords: eyes of a nomad contact, kelapa creative studio contact
 footer_image: /images/placeholder-2.jpg
 header-class: on-top
 ---
