Updated 'contact.html' via CloudCannon

--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,12 @@
 layout: default
 title: Contact | Eyes of a Nomad | Photographer in Bali
 meta-description: >-
-  Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in
-  fashion, swim and lifestyle in Bali, working with local and international
-  brands.
+  Looking to get in touch? Whether you're interested in working with us for your
+  photography project, or just want to say hello, we'd love to hear from you.
 meta-keywords: eyes of a nomad contact, kelapa creative studio contact
 footer_image: /images/placeholder-2.jpg
 header-class: on-top
 ---
-
 <section class="padded-10 padded-b-0 contact mob-flex-flip light-bg">
   <div class="padded-t-tall grid">
     <div class="col-6_sm-11 border-left padded-1 tall-70">
@@ -48,17 +46,17 @@ header-class: on-top
 
       <div class="col-10_sm-12 padded-2">
         <div class="floating-input">
-          <input type="text" name="name" placeholder="Your Name" class="input-text" required>
+          <input type="text" name="name" placeholder="Your Name" class="input-text" required />
           <label class="input-label">Your Name</label>
         </div>
 
         <div class="floating-input">
-          <input type="text" name="email" placeholder="Your Email Address" class="input-text" required>
+          <input type="text" name="email" placeholder="Your Email Address" class="input-text" required />
           <label class="input-label">Your Email Address</label>
         </div>
 
         <div class="floating-input">
-          <input type="text" name="whatsapp" placeholder="Your Whatsapp (if preferred)" class="input-text">
+          <input type="text" name="whatsapp" placeholder="Your Whatsapp (if preferred)" class="input-text" />
           <label class="input-label">Your Whatsapp</label>
         </div>
 
@@ -81,16 +79,16 @@ header-class: on-top
           <label class="input-label">Your Message</label>
         </div>
 
-        <input type="submit" value="Send Message" class="button-solid">
+        <input type="submit" value="Send Message" class="button-solid" />
 
       </div>
 
 
-      <input type="hidden" name="_to" value="hello@eyesofanomad.com">
-      <input type="text" name="_gotcha" style="display: none;">
+      <input type="hidden" name="_to" value="hello@eyesofanomad.com" />
+      <input type="text" name="_gotcha" style="display: none;" />
 
 
-    </form>
+    </div></form>
 
 
 </section>
