Updated 'about.html' via CloudCannon

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About | Eyes of a Nomad
+title: About | Eyes of a Nomad | Photographer in Bali
 meta-description: >-
   Emilio Kuzma is a full time photographer, content creator & mentor in Bali,
   Indonesia helping brands telling their story through photography/videography.
