Updated 'work-with-us.html' via CloudCannon

--- a/work-with-us.html
+++ b/work-with-us.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Work with Us | Eyes of a Nomad
+title: Work with Us | Eyes of a Nomad | Photographer in Bali
 meta-description: >-
   We're a full creative agency in Bali specialising in photography, videography
   and marketing that brings your vision to life and gets results for your
