Updated 'portfolio.html' via CloudCannon

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Portfolio | Eyes of a Nomad
+title: Portfolio | Eyes of a Nomad | Photographer in Bali
 meta-description: >-
   I’ve worked with some incredible brands both in Bali and worldwide, capturing
   and telling their individual story through the way I plan, shoot and edit.
