Updated 5 files via CloudCannon

--- a/about.html
+++ b/about.html
@@ -1,12 +1,15 @@
 ---
 layout: default
-title: About | Eyes of a Nomad | Photographer in Bali
-meta-description: >-
-  Emilio Kuzma is a full time photographer, content creator & mentor in Bali,
-  Indonesia helping brands telling their story through photography/videography.
-meta-keywords: eyes of a nomad, emilio kuzma
+title: About
 featured-image_path: /images/emile-profile.jpg
 banner_image: /images/placeholder.jpg
+seo:
+  title: About | Eyes of a Nomad | Photographer in Bali
+  meta-description: >-
+    Emilio Kuzma is a full time photographer, content creator & mentor in Bali,
+    Indonesia helping brands telling their story through
+    photography/videography.
+  meta-keywords: eyes of a nomad, emilio kuzma
 ---
 <!-- - - - - - - - - - - - - - Banner both - - - - - - - - - - - - - - - - - -->
 
