--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,13 @@
 ---
 layout: default
-title: Contact | Eyes of a Nomad | Photographer in Bali
-meta-description: >-
-  Looking to get in touch? Whether you're interested in working with us for your
-  photography project, or just want to say hello, we'd love to hear from you.
-meta-keywords: eyes of a nomad contact, kelapa creative studio contact
+title: Contact
 footer_image: /images/placeholder-2.jpg
 header-class: on-top
+seo:
+  title: Contact | Eyes of a Nomad | Photographer in Bali
+  meta-description: >-
+    Looking to get in touch? Whether you're interested in working with us for your photography project, or just want to say hello, we'd love to hear from you.
+  meta-keywords: eyes of a nomad contact, kelapa creative studio contact
 ---
 <section class="padded-10 padded-b-0 contact mob-flex-flip light-bg">
   <div class="padded-t-tall grid">
