--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 ---
 layout: default
 title: Eyes of a Nomad | Photographer in Bali
-meta-description: >-
-  Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in
-  fashion, swim and lifestyle in Bali, working with local and international
-  brands.
-meta-keywords: eyes of a nomad, photographer in bali, emilio kuzma
 header-style: on-top hide-logo
 featured-image_path:
 banner-1_path: /images/placeholder-2.jpg
@@ -19,6 +14,11 @@ slideshow:
 wide_image: /images/forsoul-2019/eon-forsoul-19.jpg
 featured_project_url: /projects/liq-bikini
 footer_image: /images/forsoul-2019/eon-forsoul-7.jpg
+seo:
+  title: Eyes of a Nomad | Photographer in Bali
+  meta-description: >-
+    Eyes of a Nomad is Emilio Kuzma, a full-time photographer specialising in fashion, swim and lifestyle in Bali, working with local and international brands.
+  meta-keywords: eyes of a nomad, photographer in bali, emilio kuzma
 ---
 <!-- this is just an example. You can safely delete these and add your own blocks -->
 
