--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,12 @@
 ---
 layout: default
-title: Portfolio | Eyes of a Nomad | Photographer in Bali
-meta-description: >-
-  I’ve worked with some incredible brands both in Bali and worldwide, capturing
-  and telling their individual story through the way I plan, shoot and edit.
-meta-keywords: kelapa creative portfolio, emilio kuzma portfolio, eyes of a nomad portfolio
+title: Portfolio
 featured_image: /images/uma-2020/eon-uma2020-30.jpg
+seo:
+  title: Portfolio | Eyes of a Nomad | Photographer in Bali
+  meta-description: >-
+    I’ve worked with some incredible brands both in Bali and worldwide, capturing and telling their individual story through the way I plan, shoot and edit.
+  meta-keywords: kelapa creative portfolio, emilio kuzma portfolio, eyes of a nomad portfolio
 ---
 <!-- Intro Banner  -->
 <section class="grid">
