--- a/work-with-us.html
+++ b/work-with-us.html
@@ -1,13 +1,6 @@
 ---
 layout: default
-title: Work with Us | Eyes of a Nomad | Photographer in Bali
-meta-description: >-
-  We're a full creative agency in Bali specialising in photography, videography
-  and marketing that brings your vision to life and gets results for your
-  brands.
-meta-keywords: >-
-  hire a photographer in bali, hire a creative agency in bali, work with emilio
-  kuzma
+title: Work with Us
 banner_image: /images/uma-alure/eon-uma-alure-10.jpg
 photography-1_image: /images/forsoul-2019/eon-forsoul-23.jpg
 photography-2_image: /images/uma-resort/eon-uma-resort-5.jpg
@@ -35,6 +28,12 @@ services:
   - name: Food
     url:
     image_path: /images/kabron/eon-kabron-21.jpg
+seo:
+  title: Work with Us | Eyes of a Nomad | Photographer in Bali
+  meta-description: >-
+    We're a full creative agency in Bali specialising in photography, videography and marketing that brings your vision to life and gets results for your brands.
+  meta-keywords: >-
+    hire a photographer in bali, hire a creative agency in bali, work with emilio kuzma
 ---
 <!-- Heading Banner  -->
 <section class="padded grid">
